<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/moon_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/planet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/moon_name"
        app:layout_constraintStart_toEndOf="@+id/moon_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moon_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_moon"
        app:layout_constraintStart_toStartOf="@+id/planet_name"
        app:layout_constraintTop_toBottomOf="@+id/planet_name" />


</androidx.constraintlayout.widget.ConstraintLayout>